@@ -9,6 +9,7 @@ Aug 25, 2016, 12:55 AM GMT+10 (AEST)
 - Internally store tags in list instead of set
 - Display elapsed time on report summary lines
 - Do not auto discover CSV files below feature directory
+- Do not treat embedded '+' literals in strings as concatenation operator
 
 1.3.4
 =====
